--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ projects/my_projects/project_2/data
 projects/project_2/data
 projects/project_2/jupyter
 utils/export_credentials.sh
+projects/04_Buttons_To_Test.py
 
 
 # C extensions
